--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      document.cookie = "same-site-cookie=foo; SameSite=Lax";
+      document.cookie = "cross-site-cookie=bar; SameSite=None; Secure";
+    </script>
   </body>
 </html>
